tests/NormalTests/paczka1/small_fuzzy/48460330.err
Error in line 3: BSs S730 64,2
Error in line 8: BSs S549 98,4
